simple-kubernetes-with-priority/deployment-high-prio-nolimit.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: hello-foo-nl
    app.kubernetes.io/instance: hello-foo-nl
  name: hello-foo-app-nl
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-foo-nl
      app.kubernetes.io/instance: hello-foo-nl
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-foo-nl
        app.kubernetes.io/instance: hello-foo-nl
    spec:
      priorityClassName: higest-priority
      containers:
        - name: hello-foo-app-nl
          command:
            - /agnhost
            - netexec
            - --http-port=8080
          image: registry.k8s.io/e2e-test-images/agnhost:2.39
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources: 
            limits: 
              memory: 25Mi
            requests: 
              cpu: 2800m
              memory: 25Mi
