simple-kubernetes-with-priority/deployment-high-prio-pdb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: hello-foo-pdb
    app.kubernetes.io/instance: hello-foo-pdb
  name: hello-foo-pdb-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-foo-pdb
      app.kubernetes.io/instance: hello-foo-pdb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-foo-pdb
        app.kubernetes.io/instance: hello-foo-pdb
    spec:
      priorityClassName: higest-priority
      containers:
        - name: hello-foo-pdb-app
          command:
            - /agnhost
            - netexec
            - --http-port=8080
          image: registry.k8s.io/e2e-test-images/agnhost:2.39
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources: 
            limits: 
              cpu: 90m
              memory: 25Mi
            requests: 
              cpu: 80m
              memory: 25Mi
