simple-kubernetes-with-priority/deployment-high-prio.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: hello-foo
    app.kubernetes.io/instance: hello-foo
  name: hello-foo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-foo
      app.kubernetes.io/instance: hello-foo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-foo
        app.kubernetes.io/instance: hello-foo
    spec:
      priorityClassName: higest-priority
      containers:
        - name: hello-foo-app
          command:
            - /agnhost
            - netexec
            - --http-port=8080
          image: registry.k8s.io/e2e-test-images/agnhost:2.39
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources: 
            limits: 
              cpu: 90m
              memory: 25Mi
            requests: 
              cpu: 80m
              memory: 25Mi
